# MRP-Praktikum

./: PreGruppeB.pptx  README.md
Ausarbeitung/: example.aux  example.bbl  example.blg  example.out  example.tex  example.toc
FZI/: .yaml  GoToRobot1.py  MRP.pgm  MRP.yaml  carroom.yaml  map_final_gmapping.pgm  map_final_gmapping.yaml  minimal.launch  turtlebot_cartographer_carroom.pgm  turtlebot_cartographer_carroom.yaml
FZI/Final/: HowTo  deliver_server.py
State-Machine/: get_pose.launch
State-Machine/cupNavigator_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/: HowTo
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/pkgconfig/: mrp.pc
catkin_ws/src/mrp/: CMakeLists.txt  package.xml
catkin_ws/src/mrp/configuration/: demo_turtlebot.rviz
catkin_ws/src/mrp/data/: MRP.yaml  map_final_gmapping.yaml  pose2  sim_world_map.yaml
catkin_ws/src/mrp/launch/: navigation_deliver.launch  sim_get_pose.launch  test_get_pose.launch
catkin_ws/src/mrp/script/: get_pose.sh
catkin_ws/src/mrp/src/: cup_navigator.py  deliver_server.py  get_pose.py
mrp_action_ws/: hallo.txt
mrp_action_ws/devel/: .catkin  .rosinstall  setup.sh
mrp_action_ws/devel/include/mob_rob_17_msgs/: AcceptCupAction.h  AcceptCupActionFeedback.h  AcceptCupActionGoal.h  AcceptCupActionResult.h  AcceptCupFeedback.h  AcceptCupGoal.h  AcceptCupResult.h  DeliverCupAction.h  DeliverCupActionFeedback.h  DeliverCupActionGoal.h  DeliverCupActionResult.h  DeliverCupFeedback.h  DeliverCupGoal.h  DeliverCupResult.h  MotionExecutorAction.h  MotionExecutorActionFeedback.h  MotionExecutorActionGoal.h  MotionExecutorActionResult.h  MotionExecutorFeedback.h  MotionExecutorGoal.h  MotionExecutorResult.h  NavigateCupAction.h  NavigateCupActionFeedback.h  (+12 more)
mrp_action_ws/src/cup_state_manager/: CMakeLists.txt  setup.py
mrp_action_ws/src/cup_state_manager/scripts/: start_navigation_action
mrp_action_ws/src/cup_state_manager/src/cup_transport/: common.py  deliver.py  dummy.py  server.py
mrp_action_ws/src/mob_rob_17_launch/: CMakeLists.txt
mrp_action_ws/src/mob_rob_17_msgs/: CMakeLists.txt
mrp_project files/cup_deliverer/: delete.py  detection.ros.ork
mrp_project files/cup_deliverer/cup_deliverer_manager/: CMakeLists.txt  package.xml
mrp_project files/cup_deliverer/grasp_planning/: CMakeLists.txt  package.xml
mrp_project files/cup_deliverer/path_planning/: CMakeLists.txt  package.xml
mrp_project files/cup_deliverer/simulation/: CMakeLists.txt  package.xml
mrp_project files/cup_deliverer/start_launch_pkg/: CMakeLists.txt  package.xml
mrp_project files/cup_deliverer/test_client/: CMakeLists.txt  package.xml
mrp_project files/cup_state_manager/: CMakeLists.txt  package.xml
mrp_project files/cup_state_manager/scripts/: start_cup_transport.py  start_dummy_robots.py
mrp_project files/mob_rob_17_launch/: package.xml
mrp_project files/mob_rob_17_launch/launch/: all_robots.launch
mrp_project files/mob_rob_17_msgs/action/: DeliverCup.action  NavigateCup.action
mrp_ws/devel/: .catkin  .rosinstall  setup.sh
mrp_ws/src/mrp_action/: CMakeLists.txt
(+441 files in other folders)
